fix responsive on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1226,3 +1226,61 @@ body:not(.dslc-res-phone) .last-column-first .dslc-first-col {
 	float:left;
 }
 
+
+@media screen and (max-width : 1280px) {
+    
+    img.alignnone.wp-image-1435.size-medium {
+        width: 250px!important;
+    }
+}
+@media screen and (max-width : 1023px) {
+    
+    img.alignnone.wp-image-1435.size-medium {
+        position: relative;
+        width: 200px!important;
+    }
+      span.text-slider-main {
+        position: relative;
+        font-size: 12px!important;
+        top: 1px;
+        line-height: 18px!important;
+    }
+}
+@media screen and (max-width : 767px) {
+    .ms-view.ms-basic-view,
+    .ms-slide.ms-sl-selected{
+        height: 150px!important;
+    }
+    
+    img.alignnone.wp-image-1435.size-medium {
+        bottom: -17px!important;
+        width: 170px!important;
+    }
+
+    .ms-layer h1 {
+        font-size: 18px!important;
+    }
+    span.text-slider-main {
+        font-size: 10px!important;
+        line-height: 12px!important;
+        top: 18px;
+    }
+    img.alignnone.size-full.wp-image-1067,
+    img.alignnone.size-full.wp-image-1071,
+    img.alignnone.size-full.wp-image-1220{
+        display:none
+    }
+}
+@media screen and (max-width : 479px) {
+
+    img.alignnone.wp-image-1435.size-medium {
+        bottom: -52px!important;
+    }
+
+    .ms-layer h1 {
+        font-size: 18px!important;
+    }
+    span.text-slider-main {
+
+    }
+}
